# open-synth-miner

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  CRPS_ADAPTIVE_FIX.md  FRAMEWORK_INTEGRATION.md  LICENSE  README.md  SKILLS.md  fetch_stock_ticks.py  main.py  pyproject.toml  requirements.txt  test_adaptive_crps.py
.clawhub/: README.md  manifest.yaml
.clawhub/skills/: backtest_evaluation.md  data_pipeline.md  deployment_publishing.md  experiment_training.md  guardrails.md  model_architecture.md
.github/workflows/: coverage.yml
configs/: config.yaml  default_baseline.yaml  hybrid_config.yaml
configs/ablation/: default.yaml
configs/data/: default_loader.yaml  massive_stocks_1min.yaml  massive_stocks_5min.yaml  ohlcv_loader.yaml
configs/model/: hybrid_manual_layernorm.yaml  hybrid_v2.yaml  hybrid_with_layernorm.yaml
configs/optimize/: custom.yaml  default.yaml  universal.yaml  wavelet.yaml
docs/: ARCHITECTURE.md  PHILOSOPHY.md  SETUP.md  blog-building-open-synth-miner.md  hf_market_data.md  revin_denormalization_guide.md  target_prediction_guide.md
notebooks/: dlinear_train_and_backtest.ipynb  fedformer_standalone_train_and_backtest.ipynb  fedformer_train_and_backtest.ipynb  sde_head_with_sde_block.ipynb  timemixer_train_and_backtest.ipynb  timesnet_train_and_backtest.ipynb  walkforward_dlinear_regime.ipynb
open_synth_miner/: __init__.py
src/: __init__.py
src/data/: __init__.py  base_dataset.py  loader.py  market_data_loader.py  regime_loader.py
src/models/: __init__.py  backbones.py  factory.py  heads.py  registry.py
src/models/components/: advanced_blocks.py
src/research/: __init__.py  ablation.py  ablation_grid.py  agent_api.py  backtest.py  backtest_runner.py  experiment_mgr.py  metrics.py  optimizer.py  trainer.py
src/tracking/: __init__.py  hub_manager.py  wandb_logger.py
tests/: conftest.py  test_ablation.py  test_ablation_grid.py  test_adaptive_crps.py  test_backtest.py  test_block_registry.py  test_comprehensive_suite.py  test_gradient_flow.py  test_heads_and_simulation.py  test_hf_parquet_source.py  test_hybrid_backbone.py  test_layernorm_block.py  test_market_data_loader.py  test_metrics_edge_cases.py  test_regime_loader.py  test_research_session.py  test_revin_denormalization.py  test_trainer_shape_handling.py
