[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-synth-miner"
version = "0.1.0"
description = "Hydra-driven research framework for Synth hybrid mining"
readme = "README.md"
authors = [{ name = "Open Synth Miner Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.2.0",
    "properscoring>=0.1",
    "wandb==0.25.0",
    "huggingface_hub>=0.22.0",
    "PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["open_synth_miner", "src"]

[tool.setuptools]
include-package-data = true
py-modules = ["main"]

[tool.setuptools.data-files]
configs = [
    "configs/*.yaml",
    "configs/**/*.yaml",
    "configs/**/*.json",
    "configs/**/*.txt",
]

[project.scripts]
open-synth-miner = "main:main"
